--- a/src/index.html
+++ b/src/index.html
@@ -48,6 +48,11 @@
         </div> -->
 
         <div id="content">
+            <div id="preloader"></div>
+            <div id="background">
+                <div id="background-clouds"></div>
+                <div id="background-rain"></div>
+            </div>
         </div>
         <script data-main="js/main" src="js/libs/require-jquery.js"></script>
         <script>
