--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
         <meta name="revisit-after" content="30 days" />
         <meta name="audience" content="all" />
 
+        <link rel="icon" type="image/png" href="images/favicon.ico" />
 
         <link rel="stylesheet" href="css/main.css">
 
