--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,8 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />  
 
-        <meta name="author" content="http://blog.bebensiganteng.com/" />
-        <meta name="copyright" content="bebensiganteng.com" />
+        <meta name="author" content="Rahmat Hidayat" />
+        <meta name="copyright" content="Rahmat Hidayat" />
         <meta name="robots" content = "all" />
         <meta name="robots" content = "index, follow" />
         <meta name="revisit-after" content="30 days" />
@@ -49,6 +49,12 @@
         </div> -->
 
         <div id="content">
+            <div id="copyright">
+                <p>
+                    &copy; 2013. All rights reserved | v-0.1 (Tested only on webkit based browsers + Apple's devices)<br>
+                    Made <i>by</i> <a href="http://blog.bebensiganteng.com/" target="_self" title="bebensiganteng">Rahmat Hidayat.</a>
+                </p>
+            </div>
             <div id="preloader"></div>
         </div>
         <script data-main="js/main" src="js/libs/require-jquery.js"></script>
