--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
         <link rel="stylesheet" href="css/main.css">
 
         <script src="js/libs/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+        <script src="js/libs/underscore.js"></script>
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -59,10 +60,14 @@
         </div>
         <script data-main="js/main" src="js/libs/require-jquery.js"></script>
         <script>
-            var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-            (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-            g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-            s.parentNode.insertBefore(g,s)}(document,'script'));
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-10254588-7', 'bebensiganteng.com');
+          ga('send', 'pageview');
+
         </script>
     </body>
 </html>
