Fix FF, some CSS, mobile implementation

--- a/src/index.html
+++ b/src/index.html
@@ -51,9 +51,11 @@
 
         <div id="content">
             <div id="copyright">
-                <p>
-                    &copy; 2013. All rights reserved | v-0.1 (Tested only on webkit based browsers + Apple's devices)<br>
-                    Made <i>by</i> <a href="http://blog.bebensiganteng.com/" target="_self" title="bebensiganteng">Rahmat Hidayat.</a>
+                <p><b>v-0.2 | Tested on</b><br>
+                    Chrome 26.0, Firefox 20.0, Version 6.0 <br>
+                    iPad Retina iOS 6.3 Safari + Chrome
+                </p>
+                <p>&copy; 2013. Made <i>by</i> <a href="http://blog.bebensiganteng.com/" target="_self" title="bebensiganteng">Rahmat Hidayat.</a>
                 </p>
             </div>
             <div id="preloader"></div>
