--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
         <div id="content">
             <div id="copyright">
                 <p><b>v-0.2 | Tested on</b><br>
-                    Chrome 26.0, Firefox 20.0, Version 6.0 <br>
+                    Chrome 26.0, Firefox 20.0, Safari Version 6.0 <br>
                     iPad Retina iOS 6.3 Safari + Chrome
                 </p>
                 <p>&copy; 2013. Made <i>by</i> <a href="http://blog.bebensiganteng.com/" target="_self" title="bebensiganteng">Rahmat Hidayat.</a>
